--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
         <title>Frontend Mentor | Results summary component</title>
     </head>
     <body>
-        <div class="container">
-            <div class="result-content">
-                <div class="score-content">
-                    <h1 class="gray-text">Your Result</h1>
-                    <div class="score-circle">
-                        <div class="score-container">
-                            <div class="white-text score"><span class="bold">76</span></div>
-                            <div class="gray-text">of 100</div>
+        <main>
+            <div class="container">
+                <div class="result-content">
+                    <div class="score-content">
+                        <h1 class="gray-text">Your Result</h1>
+                        <div class="score-circle">
+                            <div class="score-container">
+                                <div class="white-text score"><span class="bold">76</span></div>
+                                <div class="gray-text">of 100</div>
+                            </div>
                         </div>
+                        <h2 class="white-text">Great</h2>
+                        <p class="gray-text score-summary">You scored higher than 65% of the people who have taken these tests.</p>
                     </div>
-                    <h2 class="white-text">Great</h2>
-                    <p class="gray-text score-summary">You scored higher than 65% of the people who have taken these tests.</p>
-                </div>
-                <div class="summary-content">
-                    <h1>Summary</h1>
-                    <ul class="subgrade-list"></ul>    
-                    <button>Continue</button>
+                    <div class="summary-content">
+                        <h1>Summary</h1>
+                        <ul class="subgrade-list"></ul>    
+                        <button>Continue</button>
+                    </div>
                 </div>
             </div>
-        </div>
-
+        </main>
         <script src="index.js"></script>
     </body>
 </html>
